[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marineloads"
version = "0.1.0"
description = "A validated Python package for wave loads and hydrodynamics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
